--- a/client/src/Styles/register.scss
+++ b/client/src/Styles/register.scss
@@ -3,10 +3,12 @@ $phoneWidth: 480px;
 $medLaptop: 992px;
 $largeLaptop: 1200px;
 
-$brandText: #2cb978;
-$brand2: #107a8b;
-$brand3: #83e85a;
-$brand4: #3b5441;
+$brand1: #FCFCFC;
+$brand2: #23B5D3;
+$brand3: #A393BF;
+$brand4: #071013;
+$brand5: #061E22;
+$brand6: #9882AC;
 
 .registerContainer {
     display: flex;
@@ -16,12 +18,16 @@ $brand4: #3b5441;
     width: 60%;
 
     h1 {
-        color: $brandText;
+        color: $brand6;
         font-size: 32px;
     }
 
+    p {
+        color: $brand1;
+    }
+
     label {
-        color: $brand4;
+        color: $brand1;
         font-size: 24px;
         margin-top: 5%;
     }
@@ -30,11 +36,13 @@ $brand4: #3b5441;
         border-color: $brand2;
         border-radius: 5px;
         border-width: 1px;
+        background: $brand5;
+        color: $brand1;
     }
 
     input:focus {
         outline-width: 1px;
-        outline-color: $brandText;
+        outline-color: $brand6;
     }
 }
 
@@ -51,7 +59,7 @@ $brand4: #3b5441;
 
 .reg-label {
     font-size: 24px;
-    color: $brand4;
+    color: $brand3;
 }
 
 @media (max-width: $phoneWidth) {
