--- a/client/src/Styles/_base.scss
+++ b/client/src/Styles/_base.scss
@@ -3,11 +3,13 @@ $phoneWidth: 480px;
 $medLaptop: 992px;
 $largeLaptop: 1200px;
 
-$brandText: #2cb978;
-$brand2: #107a8b;
-$brand3: #83e85a;
-$brand4: #3b5441;
+$brand1: #FCFCFC;
+$brand2: #23B5D3;
+$brand3: #A393BF;
+$brand4: #071013;
+$brand5: #061E22;
+$brand6: #9882AC;
 
 h1 {
-    color: $brandText;
+    color: $brand1;
 }
