--- a/client/src/Styles/app.scss
+++ b/client/src/Styles/app.scss
@@ -1,3 +1,10 @@
+$brand1: #FCFCFC;
+$brand2: #23B5D3;
+$brand3: #A393BF;
+$brand4: #071013;
+$brand5: #061E22;
+$brand6: #9882AC;
+
 .central {
     margin-top: 0;
     padding-top: 0;
@@ -6,4 +13,5 @@
 html {
     padding: 0;
     margin: 0;
+    background: $brand4;
 }
