--- a/client/src/Styles/messageCard.scss
+++ b/client/src/Styles/messageCard.scss
@@ -1,7 +1,9 @@
-$brandText: #2cb978;
-$brand2: #107a8b;
-$brand3: #83e85a;
-$brand4: #3b5441;
+$brand1: #FCFCFC;
+$brand2: #23B5D3;
+$brand3: #A393BF;
+$brand4: #071013;
+$brand5: #061E22;
+$brand6: #67527A;
 
 $tabletWidth: 768px;
 $phoneWidth: 480px;
@@ -36,7 +38,7 @@ $largeLaptop: 1200px;
 }
 
 .author {
-    background-color: $brandText;
+    background-color: $brand6;
     width: fit-content;
     padding: 0 5px;
     border-radius: 5px;
