--- a/client/src/Styles/nav.scss
+++ b/client/src/Styles/nav.scss
@@ -1,7 +1,7 @@
 $brandText: #FCFCFC;
 $brandHeader: #071013;
 $brandPrimary: #23B5D3;
-$brandSecondary: #EBFFEB;
+$brandSecondary: #EBFFEC;
 
 $tabletWidth: 768px;
 $phoneWidth: 480px;
